# corgi-power

./: .env  Cargo.toml  README.md
src/: main.rs  render.rs  server.rs
src/graphql/: mod.rs  query.rs
src/graphql/types/: customer.rs  mod.rs
src/routes/: health.rs  index.rs  mod.rs
src/server/: mod.rs
