[package]
name = "corgi-power"
version = "0.1.0"
authors = ["Nate Strandberg <nater540@gmail.com>"]
edition = "2018"

[dependencies]
tera         = "0.11.16"
actix        = "0.7.4"
actix-web    = "0.7.8"
error-chain  = "0.12.0"
lazy_static  = "1.1.0"
maplit       = "1.0.1"
regex        = "1.0.5"
serde        = "1.0.75"
serde_derive = "1.0.75"
serde_json   = "1.0.26"
serde_yaml   = "0.8.2"
chrono       = "0.4.6"
juniper      = "0.10.0"
futures      = "0.1.24"
diesel       = { version = "1.3.3", features = ["postgres"] }

# Logging
fern = "0.5.6"
log  = "0.4.5"
